Modified ChangeLog. Made some notes. And add my name to the mailinglist
Modified ChangeLog.
Made some notes. And add my name to the mailinglist thingys.

--- a/todo.xhtml
+++ b/todo.xhtml
@@ -293,7 +293,7 @@ table.todo > tbody > tr > td + td + td{
       </td></tr>
     <tr>
       <td>done</td>
-      <td></td>
+      <td>scizzo</td>
       <td>
         mail_lists.html<br />
         url-gimp-maillists.inc
@@ -301,6 +301,9 @@ table.todo > tbody > tr > td + td + td{
       <td>
         Better list descriptions and more lists, but otherwise 'tis
         beautiful
+	<p style="font-style: italic;">
+	Is there more mailinglists that could be put here? -- scizzo
+	</p>
       </td></tr>
     <tr>
       <td></td>
@@ -370,7 +373,7 @@ table.todo > tbody > tr > td + td + td{
       </td></tr>
     <tr>
       <td></td>
-      <td>Scizzo</td>
+      <td>scizzo</td>
       <td>tutorials/</td>
       <td>
         Scizzo has a schedule for this and is following it.
@@ -393,6 +396,10 @@ table.todo > tbody > tr > td + td + td{
         The rest of the authors need to be contacted and a collection
         of "permission granted" emails should be compiled.
         </p>
+	<p style="font-style: italic;">
+	No new screenshots, tables, authors permission and image fixes. 
+	Otherwise I feel that this is done. -- scizzo
+	</p>
       </td></tr>
     <tr>
       <td></td>
