Modified ChangeLog. Fixed some typos.
Modified ChangeLog.
Fixed some typos.

--- a/mail_lists.html
+++ b/mail_lists.html
@@ -22,9 +22,9 @@
   Gimp's guts things.
   </li>
   <li>
-  English is the official languaje of the lists. There is people from
+  English is the official language of the lists. There is people from
   all around the globe so we use it. If you have problem with English,
-  a small note about it is enough. Saying which languajes do you speak
+  a small note about it is enough. Saying which languages do you speak
   better will also help, maybe someone can help clarifying the obscure
   parts of your mail.
   </li>
