Update the todo, fixed some layout bugs.

--- a/todo.xhtml
+++ b/todo.xhtml
@@ -3,7 +3,7 @@
 <!--#include virtual="/includes/wgo-look-feel.xhtml" -->
 <style type="text/css">
 table.todo p {
-  margin: .5em 0 0 0;
+  margin: .5em 0 .5em 0;
   padding: 0 0 0 0;
 }
 
@@ -41,9 +41,19 @@ table.todo > tbody > tr > td + td + td{
 </style>
 <!--#include virtual="/includes/wgo-page-init.xhtml" -->
 
+Guidelines:
+<ul>
+<li>Status is where we try and describe the current status relevant to the other developers.  It's not a weblog.</li>
+<li>Who is whomever has the "baton" and is running with it.  Dropping
+    the "baton" (eg. no progress) or handing it off (eg. another
+    developer) means the name is deleted or replaced.</li>
+<li>What is a one-line name for the task</li>
+<li>Description/Discussion is a place for the requirements for the task are listed and/or the current status of the debate is summarised.</li>
+</ul>
+
 <table class="todo" cellpadding="0" cellspacing="0"><tbody>
     <tr><th>Status</th><th>Who</th><th>What</th><th>Description/Discussion</th></tr>
-    <tr><td>Done<br/>no install</td><td>Helvetix</td><td></td><td>
+    <tr><td>Done<br/>no install yet</td><td>Helvetix</td><td></td><td>
         A crontabs directory in CVS is fine, it should be put in
         install.exclude, and install.sh modified to put them in the
         right place.
@@ -301,9 +311,9 @@ table.todo > tbody > tr > td + td + td{
       <td>
         Better list descriptions and more lists, but otherwise 'tis
         beautiful
-	<p style="font-style: italic;">
-	Is there more mailinglists that could be put here? -- scizzo
-	</p>
+ <p style="font-style: italic;">
+ Is there more mailinglists that could be put here? -- scizzo
+ </p>
       </td></tr>
     <tr>
       <td></td>
@@ -396,10 +406,10 @@ table.todo > tbody > tr > td + td + td{
         The rest of the authors need to be contacted and a collection
         of "permission granted" emails should be compiled.
         </p>
-	<p style="font-style: italic;">
-	No new screenshots, tables, authors permission and image fixes. 
-	Otherwise I feel that this is done. -- scizzo
-	</p>
+ <p style="font-style: italic;">
+ No new screenshots, tables, authors permission and image fixes. 
+ Otherwise I feel that this is done. -- scizzo
+ </p>
       </td></tr>
     <tr>
       <td></td>
