Modified ChangeLog. Fixed some more typos.
Modified ChangeLog.
Fixed some more typos.

--- a/mail_lists.html
+++ b/mail_lists.html
@@ -32,7 +32,7 @@
   Before reporting problems, check again. Make sure you are following
   the intructions correctly and that your version is not old (or that
   the problem also appears in modern versions). If you can get a
-  friend to test your problem in other computer, better, maybe you
+  friend to test your problem on another computer, better, maybe you
   discover what is your problem, or can provide info about what cases
   are free (for example bugs that only happen in Alpha computers).
   </li>
@@ -44,7 +44,7 @@
   everyone can read it, use plain text mail.
   </li>
   <li>
-  Only useful attachments, and if small. If it is more than a few KB
+  Only useful attachments, and small. If it is more than a few KB
   (say more than 10), you should (must?) upload somewhere and post the
   URL instead.
   </li>
