*** empty log message ***

--- a/mail_lists.html
+++ b/mail_lists.html
@@ -1,6 +1,5 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
-<title>GIMP - Mail Lists</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<div class="heading">GIMP - Mail Lists</div>
 <style type="text/css">
 .list li {
   padding-bottom: 1.2em;
@@ -10,9 +9,9 @@
   margin: 0 0 0 0;
 }
 </style>
-<!--#include virtual="/includes/wgo-page-init.xhtml" -->
+<!--#include virtual="/includes/header_posttitle.inc" -->
+<!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading">GIMP - Mail Lists</div>
 <!--#include virtual="/includes/urls_maillist.inc" -->
 <div class="subtitle">List Etiquette</div>
   <p>
@@ -169,5 +168,5 @@
   Conclusion: the faster, easier and cheaper people can see what is
   going in the mails, the better for all. And the topic is Gimp.
 </p>
-<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
+<!--#include virtual="/includes/linkbar.inc" -->
+<!--#include virtual="/includes/footer.inc" -->
