--- a/programmatic/contest/index.html
+++ b/programmatic/contest/index.html
@@ -1,7 +1,7 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
 <title>GIMP - Development GIMP Splash Contest</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
-<!--#include virtual="/includes/wgo-page-init.xhtml" -->
+<!--#include virtual="/includes/header_posttitle.inc" -->
+<!--#include virtual="/includes/menu.inc" -->
 <div class="heading" style="z-index: 5;">Development GIMP Splash Contest</div>
 <div class="subtitle">A Contest Which Makes No Promises</div>
   <p>Welcome to the
@@ -19,5 +19,5 @@
 <p>
   Do not forget: No promises. 
 </p>
-<!--#include virtual="/includes/wgo-page-fini.xhtml" -->
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
+<!--#include virtual="/includes/linkbar.inc" -->
+<!--#include virtual="/includes/footer.inc" -->
