--- a/todo.xhtml
+++ b/todo.xhtml
@@ -59,8 +59,8 @@ Guidelines:
         right place.
       </td></tr>
     <tr>
-      <td>Future</td>
-      <td>Brix, Helvetix</td>
+      <td>Maybe</td>
+      <td>Brix</td>
       <td>Table-less layout</td>
       <td>
         getting rid of the tables in the design would be good, I
@@ -311,9 +311,9 @@ Guidelines:
       <td>
         Better list descriptions and more lists, but otherwise 'tis
         beautiful
- <p style="font-style: italic;">
- Is there more mailinglists that could be put here? -- scizzo
- </p>
+        <p style="font-style: italic;">
+          Is there more mailinglists that could be put here? -- scizzo
+        </p>
       </td></tr>
     <tr>
       <td></td>
