--- a/about/authors.html
+++ b/about/authors.html
@@ -183,7 +183,7 @@ and more from (in alphabetical order):
 
 <!-- it would really be cool if we could have links to the homepages of the
      authors or other information about the contributions that they have
-     made. But at least this is a start. -- Rockwalrus -->
+     made. But at least this is a start. //Rockwalrus -->
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
