--- a/about/index.html
+++ b/about/index.html
@@ -14,11 +14,11 @@
   (<a href="introduction.html">more ...</a>)
 </p>
 <!--#include virtual="/includes/urls_important.inc" -->
-<div class="subtitle">GIMP History</a></div>
+<div class="subtitle">GIMP History</div>
   <ul>
     <li><a href="history.html">History of The GIMP</a></li>
-    <li><a href="http://groups.google.com/groups?selm=petm-2907952329370001%40charnley.hip.berkeley.edu&output=gplain">Two Questions</a></li>
-    <li><a href="http://groups.google.com/groups?selm=3ua2hd%24bbv%40agate.berkeley.edu&output=gplain">One Of Two Options</a></li>
+    <li><a href="http://groups.google.com/groups?selm=petm-2907952329370001%40charnley.hip.berkeley.edu&amp;output=gplain">Two Questions</a></li>
+    <li><a href="http://groups.google.com/groups?selm=3ua2hd%24bbv%40agate.berkeley.edu&amp;output=gplain">One Of Two Options</a></li>
     <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
     <li><a name="src-change123" href="ChangeLogs/1.2.3/ChangeLog.1.html">Gimp 1.2.3 ChangeLog</a></li>
     <li><a name="src-change10" href="ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
@@ -46,43 +46,43 @@
 <div class="subtitle"><a href="mediakit.html">Media Kit</a></div>
 <div class="subtitle">The GIMP in the Real World</div>
 <p>The GIMP In Education</p>
-  <ul name="urls-news-education">
+  <ul>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
   </ul>
 <p>The GIMP On the Web</p>
-  <ul name="urls-web">
+  <ul>
     <li><a href="http://www.flamingtext.com">Flamming Text Logo Generator</a></li>
     <li><a href="http://www.cooltext.com">Cooltext Logo Generator</a></li>
   </ul>
 <p>The GIMP In Film</p>
-  <ul name="urls-news-film">
+  <ul>
     <li><a href="http://www.linuxjournal.com/article.php?sid=6148">Linux and &lt;i&gt;Scoopy-Doo&lt;/i&gt;</a></li>
   </ul>
 <p>The GIMP In Medicine &amp; Science</p>
-  <ul name="urls-news-science">
+  <ul>
     <li><a href="http://lists.xcf.berkeley.edu/lists/gimp-developer/2001-August/005513.html">Particle Size Analysis</a></li>
     <li><a href="FIXME">The GIMP edge detect for X-Rays</a></li>
   </ul>
 <p>The GIMP In Electronics</p>
-  <ul name="urls-news-electronics">
+  <ul>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
   </ul>
 <p>The GIMP In the Corporate World</p>
-  <ul name="urls-news-corporate">
+  <ul>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
   </ul>
 <p>The GIMP In the Computer World</p>
-  <ul name="urls-news-computer">
+  <ul>
     <li><a href="http://www.advogato.org/article/550.html">The GIMP Transcends Bias</a></li>
   </ul>
 <p>The GIMP In Commercial Art</p>
-  <ul name="urls-news-arts">
+  <ul>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
