--- a/about/mediakit.html
+++ b/about/mediakit.html
@@ -9,8 +9,8 @@
   Text goes here...
 </p>
 <ul>
-<li><a href="wilber-huge-alpha.png">the original Wilber</li>
-<li><a href="Wilber_Construction_Kit_XP.xcf.gz">the latest Construction Kit</li>
+<li><a href="wilber-huge-alpha.png">the original Wilber</a></li>
+<li><a href="Wilber_Construction_Kit_XP.xcf.gz">the latest Construction Kit</a></li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
