--- a/develop/index.html
+++ b/develop/index.html
@@ -14,39 +14,39 @@
 <!--#include virtual="/includes/urls_go-developer.inc" -->
 <div class="subtitle">What is going on:</div>
 <p>
-  <A href="unstable.html">The Unstable GIMP</a><br />
+  <a href="unstable.html">The Unstable GIMP</a><br />
   The last 10 ChangeLog entries from The Unstable GIMP.
 </p>
 <p>
-  <A href="bugzilla-new.html">The GIMP's New Bugs</a><br />
+  <a href="bugzilla-new.html">The GIMP's New Bugs</a><br />
   The last 10 new bug reports from The GIMP Bugzilla Database
 </p>
 <p>
-  <A href="bugzilla-fixed.html">The GIMP's New Bugs</a><br />
+  <a href="bugzilla-fixed.html">The GIMP's New Bugs</a><br />
   The last 10 FIXED bug reports from The GIMP Bugzilla Database
 </p>
 <p>
-  <A href="plugins.html">The Last 10 Plug-ins</a><br />
+  <a href="plugins.html">The Last 10 Plug-ins</a><br />
   The last 10 plug-ins, new or updated.
 </p>
 <p>
-  <A href="stable.html">GIMP -r gimp-1-2 </a><br />
+  <a href="stable.html">GIMP -r gimp-1-2 </a><br />
   The last 10 ChangeLog entries from The Stable GIMP
 </p>
 <p>
-  <A href="help.html">GIMP Help</a><br />
+  <a href="help.html">GIMP Help</a><br />
   The last 10 ChangeLog entries from The GIMP Help Project
 </p>
 <p>
-  <A href="print.html">GIMP Print</a><br />
+  <a href="print.html">GIMP Print</a><br />
   The last 10 ChangeLog entries from The GIMP Help Project
 </p>
 <p>
-  <A href="film.html">FilmGIMP</a><br />
+  <a href="film.html">FilmGIMP</a><br />
   The last 10 ChangeLog entries from The FilmGIMP
 </p>
 <p>
-  <A href="gegl.html">GEGL</a><br />
+  <a href="gegl.html">GEGL</a><br />
   The last 10 ChangeLog entries from GEGL
 </p>
 
