--- a/links/index.html
+++ b/links/index.html
@@ -10,69 +10,65 @@ This page contains the best links to interesting GIMP-sites:
 
 <div class="subtitle">Other Useful URLs</div>
 <ul>
-    <li> <a href="#maillists">Mailinglists</a>
-    <li> <a href="#org">The GIMP Organization</a>
-    <li> <a href="#tuts">Tutorials</a>
-    <li> <a href="#clubs">Communities</a>
-    <li> <a href="#developer">Developer</a>
-    <li> <a href="#created">Created with GIMP</a>
-    <li> <a href="#more">More GIMP-links</a>
-    <li> <a href="#other">Other Graphics Applications</a>
+    <li><a href="#maillists">Mailinglists</a></li>
+    <li><a href="#org">The GIMP Organization</a></li>
+    <li><a href="#tuts">Tutorials</a></li>
+    <li><a href="#clubs">Communities</a></li>
+    <li><a href="#developer">Developer</a></li>
+    <li><a href="#created">Created with GIMP</a></li>
+    <li><a href="#more">More GIMP-links</a></li>
+    <li><a href="#other">Other Graphics Applications</a></li>
 </ul>
 
 <p>&nbsp;</p>
-<a name="maillists">
+<a name="maillists"></a>
 <!--#include virtual="/includes/urls_maillist.inc" -->
 <p>
-  <A href="mail_lists.html">The GIMP Maillist Page</a><br />
+  <a href="mail_lists.html">The GIMP Maillist Page</a><br />
   A more thorough overview of The GIMP related mail lists and some mail list
   ettiquette.
 </p>
 
 
 <p>&nbsp;</p>
-<a name="org">
-<div class="subtitle">The GIMP (dis)Organization</div>
+<div class="subtitle"><a name="org">The GIMP (dis)Organization</a></div>
 <!--#include virtual="/includes/urls_go-utility.inc" -->
 <p>
-  <A href="org.html">More ...</a><br />
+  <a href="org.html">More ...</a><br />
 </p>
 
 
 <p>&nbsp;</p>
-<a name="developer">
-<div class="subtitle">Developer</div>
+<div class="subtitle"><a name="developer">Developer</a></div>
 <!--#include virtual="/includes/urls_go-developer.inc" -->
 
 <p>&nbsp;</p>
-<a name="tuts">
-<div class="subtitle">Tutorials</div>
+<div class="subtitle"><a name="tuts">Tutorials</a></div>
 <p>
-  <A href="http://gug.sunsite.dk/?page=tutorials">Tutorials-page from GIMP Usergroup (GUG)</a><br />
+  <a href="http://gug.sunsite.dk/?page=tutorials">Tutorials-page from GIMP Usergroup (GUG)</a><br />
   The GUG-website has some cool GIMP-tutorials online.
 </p>
 <p>
-  <A href="http://empyrean.lib.ndsu.nodak.edu/~nem/gimp/tuts/">Pointers to GIMP-tutorials</a><br />
+  <a href="http://empyrean.lib.ndsu.nodak.edu/~nem/gimp/tuts/">Pointers to GIMP-tutorials</a><br />
   This site has pointers to GIMP-tutorials all over the Internet. Some are outdated, but most tutorials show nice GIMP-tips &amp; tricks.
 </p>
 
 <p>&nbsp;</p>
-<a name="more">
-<div class="subtitle">More GIMP-links</div>
+<div class="subtitle"><a name="more">More GIMP-links</a></div>
 <p>
-  <A href="http://gimp.pagina.nl">GIMP-startpagina</a> <small>(Dutch version)</small><br />
+  <a href="http://gimp.pagina.nl">GIMP-startpagina</a> <small>(Dutch version)</small><br />
   Just one page, but contains the most up-to-date collection of links to GIMP-sites
 </p>
 <p>
-  <A href="http://gimp.start4all.com">GIMP-startpage</a> <small>(English version)</small><br />
+  <a href="http://gimp.start4all.com">GIMP-startpage</a> <small>(English version)</small><br />
   Essentially the same as the one above, but this time in English
 </p>
 <p>
-  <A href="http://dmoz.org/Computers/Software/Graphics/Image_Editing/The_GIMP/">GIMP-category from ODP</a><br />
+  <a href="http://dmoz.org/Computers/Software/Graphics/Image_Editing/The_GIMP/">GIMP-category from ODP</a><br />
   This OpenDirectoryProject-category holds links to GIMP-sites (like this page)
 </p>
 <p>
-  <A href="http://dmoz.org/World/Nederlands/Computers/Graphics/Software/GIMP/">Dutch GIMP-category from ODP</a><br />
+  <a href="http://dmoz.org/World/Nederlands/Computers/Graphics/Software/GIMP/">Dutch GIMP-category from ODP</a><br />
   This OpenDirectoryProject-category contains only links to Dutch GIMP-sites
 </p>
 
@@ -80,55 +76,52 @@ This page contains the best links to interesting GIMP-sites:
 
 
 <p>&nbsp;</p>
-<a name="clubs">
-<div class="subtitle">Clubs &amp; Communities</div>
+<div class="subtitle"><a name="clubs">Clubs &amp; Communities</a></div>
 <p>
-  <A href="http://www.gimpforce.org">GIMP Usergroup (GUG)</a><br />
+  <a href="http://www.gimpforce.org">GIMP Usergroup (GUG)</a><br />
   Meet fellow-GIMP-users here and see what they created using GIMP
 </p>
 <p>
-  <A href="http://groups.yahoo.com/group/thegimp2/">English GIMP-club</a><br />
+  <a href="http://groups.yahoo.com/group/thegimp2/">English GIMP-club</a><br />
   English-spoken community to discuss using The GIMP
 </p>
 <p>
-  <A href="http://computer.clubs.nl/GIMP">Dutch GIMP-club</a><br />
+  <a href="http://computer.clubs.nl/GIMP">Dutch GIMP-club</a><br />
   Dutch-spoken community to promote GIMP-usage in The Netherlands
 </p>
 
 <p>&nbsp;</p>
-<a name="created">
-<div class="subtitle">Created with GIMP</div>
+<div class="subtitle"><a name="created">Created with GIMP</a></div>
 <p>
-  <A href="http://gug.sunsite.dk/gallery.php">Galleries from GUG</a><br />
+  <a href="http://gug.sunsite.dk/gallery.php">Galleries from GUG</a><br />
   The largest collection of GIMP-created graphics
 </p>
 <p>
-  <A href="http://computer.clubs.nl/GIMP">Dutch GIMP-club</a><br />
+  <a href="http://computer.clubs.nl/GIMP">Dutch GIMP-club</a><br />
   Dutch-spoken community to promote GIMP-usage in The Netherlands.
 </p>
 <p>
-  <A href="http://dmoz.org/Arts/Visual_Arts/Computer_Graphics/The_GIMP/">Computer-graphics with GIMP</a><br />
+  <a href="http://dmoz.org/Arts/Visual_Arts/Computer_Graphics/The_GIMP/">Computer-graphics with GIMP</a><br />
   This OpenDirectoryProject-category holds links to galleries of images created with GIMP
 </p>
 
 
 <p>&nbsp;</p>
-<a name="other">
-<div class="subtitle">Other Graphics Applications</div>
+<div class="subtitle"><a name="other">Other Graphics Applications</a></div>
 <p>
-  <A href="http://www.imagemagick.org/">ImageMagick</a><br>
+  <a href="http://www.imagemagick.org/">ImageMagick</a><br />
   A robust collection of tools and libraries that work at the command line as well.
 </p>
 <p>
-  <A href="http://sketch.sourceforge.net/">Sketch</a><br>
+  <a href="http://sketch.sourceforge.net/">Sketch</a><br />
   A vector drawing program for Unix.
 </p>
 <p>
-  <A href="http://www.newbreedsoftware.com/tuxpaint/">Tux Paint</a><br>
+  <a href="http://www.newbreedsoftware.com/tuxpaint/">Tux Paint</a><br />
   A drawing program for young children.
 </p>
 <p>
-  <A href="http://www.trilon.com/xv/">XV</a><br>
+  <a href="http://www.trilon.com/xv/">XV</a><br />
   One of the original unix graphics applications.
 </p>
 
@@ -136,7 +129,7 @@ This page contains the best links to interesting GIMP-sites:
 <br /><br />
 <a href="http://www.start4all.com/webSite/suggestions.php?subject=gimp">Add a new link</a><br /><br />
 <b>Disclaimer:</b> this page does not contain all GIMP-links available. This is just a nice overview.<br />
-More links can be found on <a href="http://gimp.start4all.com">the GIMP-startpage</a> instead.</b>
+More links can be found on <a href="http://gimp.start4all.com">the GIMP-startpage</a> instead.
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
