--- a/links/org.html
+++ b/links/org.html
@@ -7,75 +7,75 @@
 <p>&nbsp;</p>
 <div class="subtitle">The GIMP (dis)Organization</div>
 <p>
-  <A href="http://www.gimp.org">www.gimp.org</a><br />
-  <A href="http:// i.just.love.the.gimp.org"> i.just.love.the.gimp.org</a><br />
-  <A href="http:// bring.out.the.gimp.org"> bring.out.the.gimp.org</a><br />
+  <a href="http://www.gimp.org">www.gimp.org</a><br />
+  <a href="http:// i.just.love.the.gimp.org"> i.just.love.the.gimp.org</a><br />
+  <a href="http:// bring.out.the.gimp.org"> bring.out.the.gimp.org</a><br />
   The GIMP web site.
 </p>
 <p>
-  <A href="http://bugs.gimp.org">bugs.gimp.org</a><br />
-  <A href="http://bugzilla.gimp.org">bugzilla.gimp.org</a><br />
+  <a href="http://bugs.gimp.org">bugs.gimp.org</a><br />
+  <a href="http://bugzilla.gimp.org">bugzilla.gimp.org</a><br />
   Take your bugs here.
 </p>
 <p>
-  <A href="http://developer.gimp.org">developer.gimp.org</a><br />
+  <a href="http://developer.gimp.org">developer.gimp.org</a><br />
   The GIMP Developer site
 </p>
 <p>
-  <A href="http://manual.gimp.org">manual.gimp.org</a><br />
+  <a href="http://manual.gimp.org">manual.gimp.org</a><br />
   The GIMP User Maunual (GUM)
 </p>
 <p>
-  <A href="http://registry.gimp.org">registry.gimp.org</a><br />
+  <a href="http://registry.gimp.org">registry.gimp.org</a><br />
   Plug-ins.
 </p>
 <p>
-  <A href="http://ircd.gimp.org">ircd.gimp.org</a><br />
+  <a href="http://ircd.gimp.org">ircd.gimp.org</a><br />
   The Official site of GIMPNet.
 </p>
 <p>
-  <A href="http://adrian.gimp.org">adrian.gimp.org</a><br />
+  <a href="http://adrian.gimp.org">adrian.gimp.org</a><br />
   Tutorials, and other useful and entertaining information.
 </p>
 <p>
-  <A href="http://brix.gimp.org">brix.gimp.org</a><br />
-  <A href="http://cinamon.gimp.org">cinamon.gimp.org</a><br />
+  <a href="http://brix.gimp.org">brix.gimp.org</a><br />
+  <a href="http://cinamon.gimp.org">cinamon.gimp.org</a><br />
   A study in Server Side Includes.
 </p>
 <p>
-  <A href="http://carol.gimp.org">carol.gimp.org</a><br />
+  <a href="http://carol.gimp.org">carol.gimp.org</a><br />
   Resources and tutorials.
 </p>
 <p>
-  <A href="http://drc.gimp.org">drc.gimp.org</a><br />
+  <a href="http://drc.gimp.org">drc.gimp.org</a><br />
   Designer of wgo2, among other sites. Tutorials as well.
 </p>
 <p>
-  <A href="http://mitch.gimp.org">mitch.gimp.org</a><br />
+  <a href="http://mitch.gimp.org">mitch.gimp.org</a><br />
   Web space for a mad man, maybe.
 </p>
 <p>
-  <A href="http://tigert.gimp.org">tigert.gimp.org</a><br />
+  <a href="http://tigert.gimp.org">tigert.gimp.org</a><br />
   Famous linux artist.  Enough said.
 </p>
 <p>
-  <A href="http://sven.gimp.org">sven.gimp.org</a><br />
+  <a href="http://sven.gimp.org">sven.gimp.org</a><br />
   Tutorials and some of the original GIMP script-fu.
 </p>
 <p>
-  <A href="http://syngin.gimp.org">syngin.gimp.org</a><br />
+  <a href="http://syngin.gimp.org">syngin.gimp.org</a><br />
   Tutorials, #gimp urls and people.
 </p>
 <p>
-  <A href="http://vidar.gimp.org">vidar.gimp.org</a><br />
+  <a href="http://vidar.gimp.org">vidar.gimp.org</a><br />
   Author of GIMPressionist and Fire Annimation plug-ins.
 </p>
 <p>
-  <A href="http://yosh.gimp.org">yosh.gimp.org</a><br />
+  <a href="http://yosh.gimp.org">yosh.gimp.org</a><br />
   Someones GIMP art.
 </p>
 <p>
-  <A href="http://xach.gimp.org">xach.gimp.org</a><br />
+  <a href="http://xach.gimp.org">xach.gimp.org</a><br />
   The model for GIMP help.
 </p>
 <!--#include virtual="/includes/linkbar.inc" -->
