--- a/mail_lists.html
+++ b/mail_lists.html
@@ -1,17 +1,7 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
-<div class="heading">GIMP - Mail Lists</div>
-<style type="text/css">
-.list li {
-  padding-bottom: 1.2em;
-}
-
-.list p { 
-  margin: 0 0 0 0;
-}
-</style>
+<title>GIMP - Mailing Lists</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
-
 <!--#include virtual="/includes/urls_maillist.inc" -->
 <div class="subtitle">List Etiquette</div>
   <p>
