--- a/books/index.html
+++ b/books/index.html
@@ -7,7 +7,7 @@
 
 <div class="subtitle">Essential GIMP for Web Professionals</div>
 <p>
-  <img class="icon" src="essential_gimp_for_web_professionals.png" alt="">
+  <img class="icon" src="essential_gimp_for_web_professionals.png" alt=""/>
   <strong>Author:</strong> Michael J. Hammel<br/>
   <strong>Format:</strong> Paperback, 376pp.<br/>
   <strong>ISBN:</strong> 0-130-19114-0<br/>
@@ -25,11 +25,11 @@
 
 <div class="subtitle">The GIMP Pocket Reference</div>
 <p>
-  <img class="icon" src="the_gimp_pocket_reference.png" alt="">
+  <img class="icon" src="the_gimp_pocket_reference.png" alt=""/>
   <strong>Author:</strong> Sven Neumann<br/>
   <strong>Format:</strong> Paperback, 97pp.<br/>
   <strong>ISBN:</strong> 1-565-92731-1<br/>
-  <strong>Publisher/Date:</strong> O'Reilly & Associates, Incorporated/August 2000<br/>
+  <strong>Publisher/Date:</strong> O'Reilly &amp; Associates, Incorporated/August 2000<br/>
   <strong>Website:</strong> <a href="http://www.oreilly.com/catalog/gimppr/">http://www.oreilly.com/catalog/gimppr/</a><br/>
   <br/>
   <strong>Description:</strong> The GIMP Pocket Reference explains the
@@ -43,7 +43,7 @@
 
 <div class="subtitle">Grokking the GIMP</div>
 <p>
-  <img class="icon" src="grokking_the_gimp.png" alt="">
+  <img class="icon" src="grokking_the_gimp.png" alt=""/>
   <strong>Author:</strong> Carey Bunks<br/>
   <strong>Format:</strong> Paperback, 352pp.<br/>
   <strong>ISBN:</strong> 0-735-70924-6<br/>
@@ -68,7 +68,7 @@
 
 <div class="subtitle">GIMP - The Official Handbook</div>
 <p>
-  <img class="icon" src="gimp_the_official_handbook.png" alt="">
+  <img class="icon" src="gimp_the_official_handbook.png" alt=""/>
   <strong>Authors:</strong> Olof S. Kylander, Karin Kylander<br/>
   <strong>Format:</strong> Paperback, 895pp.<br/>
   <strong>ISBN:</strong> 1-576-10520-2<br/>
@@ -97,7 +97,7 @@
 
 <div class="subtitle">GIMP Essential Reference</div>
 <p>
-  <img class="icon" src="gimp_esential_reference.png" alt="">
+  <img class="icon" src="gimp_esential_reference.png" alt=""/>
   <strong>Author:</strong> Alex Harford<br/>
   <strong>Format:</strong> Paperback, 373pp.<br/>
   <strong>ISBN:</strong> 0-735-70911-4<br/>
@@ -114,7 +114,7 @@
 
 <div class="subtitle">The Artist Guide to the Gimp</div>
 <p>
-  <img class="icon" src="the_artist_guide_to_the_gimp.png" alt="">
+  <img class="icon" src="the_artist_guide_to_the_gimp.png" alt=""/>
   <strong>Author:</strong> Michael J. Hammel<br/>
   <strong>Format:</strong> Paperback, 340pp.<br/>
   <strong>ISBN:</strong> 1-578-31011-3<br/>
