--- a/unix/index.html
+++ b/unix/index.html
@@ -5,7 +5,7 @@
 
 <div class="heading">GIMP for Unix</div>
 <div class="subtitle"><a href="INSTALL">Installation Instructions</a></div>
-<div class="subtitle">Linux How To's</div>
+<div class="subtitle">GNU/Linux How To's</div>
   <ul>
     <li><a href="howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
   </ul>
